[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioworkers"
dynamic = [
    "version",
    "readme",
]
description = "Easy configurable workers based on asyncio"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Alexander Malev", email = "malev@somedev.ru" },
]
keywords = [
    "aioworkers",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
aiohttp = [
    "aioworkers-aiohttp",
    "uvloop",
]
sentry = [
    "aioworkers-sentry",
]
prometheus = [
    "aioworkers-prometheus",
]
web = [
    "httptools",
    "uvloop",
    "pyyaml",
]
cron = [
    "crontab",
]
toml = [
    "tomli ; python_version < '3.11'",
]
interactive = [
    "ipykernel",
]
dev-test = [
    "coverage[toml]==7.6.1",
    "pytest==8.3.2",
    "pytest-aioworkers[asyncio,aiohttp]==0.4",
    "pytest-mock==3.14.0",
    "pytest-timeout==2.3.1",
    "pyyaml==6.0.2",
    "msgpack==1.1.0",
    "bson==0.5.10",
    "httptools==0.6.1",
]
dev-interactive = [
    "ipykernel==6.29.5",
    "ipython==8.26.0",
]
dev-lint = [
    "ruff==0.6.9",
    "isort==5.13.2",
    "black==24.8.0",
    "mypy==1.11.2",
    "types-PyYAML",
    "types-setuptools",
]

[project.scripts]
aioworkers = "aioworkers.cli:main"

[project.urls]
Homepage = "https://github.com/aioworkers/aioworkers"
Documentation = "https://aioworkers.readthedocs.io"
Issues = "https://github.com/aioworkers/aioworkers/issues"
Source = "https://github.com/aioworkers/aioworkers"

[tool.hatch.version]
path = "aioworkers/__init__.py"

[tool.hatch.metadata.hooks.custom]
readme_content_type = "text/x-rst"
readme = "README.rst"
history = "HISTORY.rst"

[tool.hatch.build]
ignore-vcs = true
include = [
    "/aioworkers",
]

[tool.hatch.envs.default]
features = [
    "dev-test",
    "interactive",
    "cron",
]
[tool.hatch.envs.default.scripts]
cov = [
    "coverage run -m pytest",
    "coverage report",
]

[[tool.hatch.envs.all.matrix]]
python = [
    "3.8",
    "3.9",
    "3.10",
    "3.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "aioworkers",
    "tests",
]
addopts = [
    "-s",
    "--doctest-modules",
]

[tool.coverage.run]
branch = false
parallel = false
source = [
    "aioworkers",
    "tests",
]
omit = [
    "hatch_build.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
]
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.hatch.envs.lint]
python = "3.8"
features = [
    "dev-lint",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:aioworkers tests}"
style = [
    "ruff {args:aioworkers tests}",
    "isort --check-only --diff {args:aioworkers tests}",
    "black --check --diff {args:aioworkers tests}",
]
fmt = [
    "ruff --fix {args:aioworkers tests}",
    "isort {args:aioworkers tests}",
    "black {args:aioworkers tests}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.envs.template]
detached = true
dependencies = [
    "scaraplate",
]
[tool.hatch.envs.template.scripts]
update = [
    "scaraplate rollup --no-input {args:../cookiecutter-aioworkers-plugin} ."
]
clone = [
    "git clone https://github.com/aioworkers/cookiecutter-aioworkers-plugin {args:../cookiecutter-aioworkers-plugin}"
]
