[aliases]
test=pytest

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = tests aioworkers
addopts = -s --doctest-modules

[isort]
profile = black
; lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = True

[mypy]
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
ignore_missing_imports = true

[options.extras_require]
aiohttp = aioworkers-aiohttp; uvloop
sentry = aioworkers-sentry
prometheus = aioworkers-prometheus
web = httptools; uvloop; pyyaml
cron = crontab
